--- a/src/app/Modules/dashboard/pages/small-cells/small-cells.component.html
+++ b/src/app/Modules/dashboard/pages/small-cells/small-cells.component.html
@@ -439,7 +439,7 @@
           </mat-accordion>
         </mat-tab>
       </div>
-      <mat-tab label="Open Tickets">
+      <!-- <mat-tab label="Open Tickets">
         <div class="fixed_tab_header">
           <div class="filter" [matMenuTriggerFor]="filter">
             filter: {{ selectedFilter }}
@@ -669,17 +669,11 @@
                     standard dummy text ever since the 1500s</mat-card
                   >
                 </mat-nav-list>
-                <!-- <div class="card-buttons">
-                <button mat-button class="can-btn" (click)="setparent(null)">
-                  Cancel
-                </button>
-                <button mat-raised-button class="sub-btn">Submit</button>
-              </div> -->
               </mat-card>
             </mat-action-row>
           </mat-expansion-panel>
         </mat-accordion>
-      </mat-tab>
+      </mat-tab> -->
       <mat-tab label="History">
         <div class="fixed_tab_header">
           <div class="filter" [matMenuTriggerFor]="filter">
@@ -703,6 +697,9 @@
               <button mat-menu-item>Item 2</button>
             </mat-menu>
           </div>
+        </div>
+        <div *ngIf="historys.length === 0">
+          <p>There are no history at the moment</p>
         </div>
         <div>
           <mat-card *ngFor="let history of historys" class="history-card">
