--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -93,8 +93,12 @@
                   style="margin-left: -6px" /></sup></sup></sup
         ></sup>
       </div>
-      <div class="mx-auto my-auto">
+      <div class="mx-auto my-auto" [aetherMenu]="menuTrigger">
         <img src="../../assets/Navbar/profile-pic.svg" />
+        <img
+          class="mx-3"
+          src="../../../../assets/Navbar/dropdown-down-arrow.svg"
+        />
       </div>
       <div class="">
         <button
@@ -121,8 +125,8 @@
 <!-- Controls Menu -->
 <mat-menu
   class="
-    sideNavbar_navCard-triangle
     aether-ControlsMenu aether-ControlsMenu_navCard
+    aether-ControlsMenu-triangle
     p-2
   "
   #ControlsMenu="matMenu"
@@ -136,7 +140,7 @@
     class="admin-sideCol-navCard-controlLine"
     src="../../assets/CommonAssets/ControlMenuLine.svg"
   />
-  <div class="" routerLink="/admin">
+  <!-- <div class="" routerLink="/admin">
     <div
       class="d-flex"
       [ngClass]="{
@@ -171,8 +175,18 @@
         Admin
       </div>
     </div>
+  </div> -->
+  <div
+    id="admin-nav"
+    class="menu d-flex align-items-center"
+    routerLink="/admin"
+  >
+    <div class="img-bg">
+      <div class="icon admin-link"></div>
+    </div>
+    <div class="label mx-2">Admin</div>
   </div>
-  <div class="my-2" routerLink="/device-sim">
+  <!-- <div class="my-2" routerLink="/device-sim">
     <div
       class="d-flex"
       [ngClass]="{
@@ -216,57 +230,30 @@
         Devices / Sim
       </div>
     </div>
-  </div>
-  <div class="mb-3" routerLink="/services">
-    <div
-      class="d-flex"
-      [ngClass]="{
-        sideNavbar_optionStyling_active:
-          menuIcons.services.servicesString ===
-          menuIcons.services.servicesActive,
-        sideNavbar_optionStyling_inactive:
-          menuIcons.services.servicesString ===
-          menuIcons.services.servicesInactive
-      }"
-      (mouseover)="
-        menuIcons.services.servicesString = menuIcons.services.servicesActive
-      "
-      (mouseout)="
-        menuIcons.services.servicesString = menuIcons.services.servicesInactive
-      "
-    >
-      <div>
-        <span
-          class="sideNavbar_iconbg_inactive mx-1"
-          [ngStyle]="{
-            'background-color':
-              menuIcons.services.servicesString ===
-              menuIcons.services.servicesActive
-                ? '#0063F7'
-                : '#EDF4FF'
-          }"
-        >
-          <img
-            [src]="menuIcons.services.servicesString"
-            height="12px"
-            width="12px"
-          />
-        </span>
-      </div>
-      <div
-        class="admin-sideCol-navCard-subHeading mx-2"
-        [ngClass]="{
-          sideNavbar_text_active:
-            menuIcons.services.servicesString ===
-            menuIcons.services.servicesActive
-        }"
-      >
-        Services
-      </div>
+  </div> -->
+  <div
+    id="navitem"
+    class="menu d-flex align-items-center"
+    routerLink="/device-sim"
+  >
+    <div class="img-bg">
+      <div class="icon device-sim-link"></div>
     </div>
+    <div class="label mx-2">Devices / Sim</div>
   </div>
+  <div
+    id="services-nav"
+    class="menu d-flex align-items-center"
+    routerLink="/services"
+  >
+    <div class="img-bg">
+      <div class="icon services-link"></div>
+    </div>
+    <div class="label mx-2">Services</div>
+  </div>
+
   <mat-card-header>
-    <mat-card-title class="sideNavbar_navCard_headings"
+    <mat-card-title class="my-2 sideNavbar_navCard_headings"
       >CONFIGURE</mat-card-title
     >
   </mat-card-header>
@@ -274,202 +261,56 @@
     class="admin-sideCol-navCard-controlLine"
     src="../../assets/CommonAssets/ControlMenuLine.svg"
   />
-  <div class="" routerLink="/small-cells">
-    <div
-      class="d-flex"
-      [ngClass]="{
-        sideNavbar_optionStyling_active:
-          menuIcons.smallCells.smallCellsString ===
-          menuIcons.smallCells.smallCellsActive,
-        sideNavbar_optionStyling_inactive:
-          menuIcons.smallCells.smallCellsString ===
-          menuIcons.smallCells.smallCellsInactive
-      }"
-      (mouseover)="
-        menuIcons.smallCells.smallCellsString =
-          menuIcons.smallCells.smallCellsActive
-      "
-      (mouseout)="
-        menuIcons.smallCells.smallCellsString =
-          menuIcons.smallCells.smallCellsInactive
-      "
-    >
-      <div>
-        <span
-          class="sideNavbar_iconbg_inactive mx-1"
-          [ngStyle]="{
-            'background-color':
-              menuIcons.smallCells.smallCellsString ===
-              menuIcons.smallCells.smallCellsActive
-                ? '#0063F7'
-                : '#EDF4FF'
-          }"
-        >
-          <img
-            [src]="menuIcons.smallCells.smallCellsString"
-            height="12px"
-            width="12px"
-          />
-        </span>
-      </div>
-      <div
-        class="admin-sideCol-navCard-subHeading mx-2"
-        [ngClass]="{
-          sideNavbar_text_active:
-            menuIcons.smallCells.smallCellsString ===
-            menuIcons.smallCells.smallCellsActive
-        }"
-      >
-        Small Cells
-      </div>
+  <div
+    id="smallCells-nav"
+    class="menu d-flex align-items-center"
+    routerLink="/small-cells"
+  >
+    <div class="img-bg">
+      <div class="icon small-cells-link"></div>
     </div>
+    <div class="label mx-2">Small Cells</div>
   </div>
-  <div class="my-2" routerLink="/device-groups">
-    <div
-      class="d-flex"
-      [ngClass]="{
-        sideNavbar_optionStyling_active:
-          menuIcons.deviceGroups.deviceGroupsString ===
-          menuIcons.deviceGroups.deviceGroupsActive,
-        sideNavbar_optionStyling_inactive:
-          menuIcons.deviceGroups.deviceGroupsString ===
-          menuIcons.deviceGroups.deviceGroupsInactive
-      }"
-      (mouseover)="
-        menuIcons.deviceGroups.deviceGroupsString =
-          menuIcons.deviceGroups.deviceGroupsActive
-      "
-      (mouseout)="
-        menuIcons.deviceGroups.deviceGroupsString =
-          menuIcons.deviceGroups.deviceGroupsInactive
-      "
-    >
-      <div>
-        <span
-          class="sideNavbar_iconbg_inactive mx-1"
-          [ngStyle]="{
-            'background-color':
-              menuIcons.deviceGroups.deviceGroupsString ===
-              menuIcons.deviceGroups.deviceGroupsActive
-                ? '#0063F7'
-                : '#EDF4FF'
-          }"
-        >
-          <img
-            [src]="menuIcons.deviceGroups.deviceGroupsString"
-            height="12px"
-            width="12px"
-          />
-        </span>
-      </div>
-      <div
-        class="admin-sideCol-navCard-subHeading mx-2"
-        [ngClass]="{
-          sideNavbar_text_active:
-            menuIcons.deviceGroups.deviceGroupsString ===
-            menuIcons.deviceGroups.deviceGroupsActive
-        }"
-      >
-        Device Groups
-      </div>
+
+  <div
+    id="deviceGroups-nav"
+    class="menu d-flex align-items-center"
+    routerLink="/device-groups"
+  >
+    <div class="img-bg">
+      <div class="icon device-groups-link"></div>
     </div>
+    <div class="label mx-2">Device Groups</div>
   </div>
-  <div class="mb-3" routerLink="/slices">
-    <div
-      class="d-flex"
-      [ngClass]="{
-        sideNavbar_optionStyling_active:
-          menuIcons.slices.slicesString === menuIcons.slices.slicesActive,
-        sideNavbar_optionStyling_inactive:
-          menuIcons.slices.slicesString === menuIcons.slices.slicesInactive
-      }"
-      (mouseover)="
-        menuIcons.slices.slicesString = menuIcons.slices.slicesActive
-      "
-      (mouseout)="
-        menuIcons.slices.slicesString = menuIcons.slices.slicesInactive
-      "
-    >
-      <div>
-        <span
-          class="sideNavbar_iconbg_inactive mx-1"
-          [ngStyle]="{
-            'background-color':
-              menuIcons.slices.slicesString === menuIcons.slices.slicesActive
-                ? '#0063F7'
-                : '#EDF4FF'
-          }"
-        >
-          <img
-            [src]="menuIcons.slices.slicesString"
-            height="12px"
-            width="12px"
-          />
-        </span>
-      </div>
-      <div
-        class="admin-sideCol-navCard-subHeading mx-2"
-        [ngClass]="{
-          sideNavbar_text_active:
-            menuIcons.slices.slicesString === menuIcons.slices.slicesActive
-        }"
-      >
-        Slices
-      </div>
+  <div
+    id="slices-nav"
+    class="menu d-flex align-items-center"
+    routerLink="/slices"
+  >
+    <div class="img-bg">
+      <div class="icon slices-link"></div>
     </div>
+    <div class="label mx-2">Slices</div>
   </div>
+
   <mat-card-header>
-    <mat-card-title class="sideNavbar_navCard_headings">REPORTS</mat-card-title>
+    <mat-card-title class="my-2 sideNavbar_navCard_headings"
+      >REPORTS</mat-card-title
+    >
   </mat-card-header>
   <img
     class="admin-sideCol-navCard-controlLine"
     src="../../assets/CommonAssets/ControlMenuLine.svg"
   />
-  <div>
-    <div
-      class="d-flex"
-      [ngClass]="{
-        sideNavbar_optionStyling_active:
-          menuIcons.audit.auditString === menuIcons.audit.auditActive ||
-          url === '/sidenavbar',
-        sideNavbar_optionStyling_inactive:
-          menuIcons.audit.auditString === menuIcons.audit.auditInactive
-      }"
-      (mouseover)="menuIcons.audit.auditString = menuIcons.audit.auditActive"
-      (mouseout)="menuIcons.audit.auditString = menuIcons.audit.auditInactive"
-    >
-      <div class="">
-        <span
-          class="sideNavbar_iconbg_inactive mx-1"
-          [ngStyle]="{
-            'background-color':
-              menuIcons.audit.auditString === menuIcons.audit.auditActive ||
-              url === '/sidenavbar'
-                ? '#0063F7'
-                : '#EDF4FF'
-          }"
-        >
-          <img
-            [src]="
-              url === '/sidenavbar'
-                ? menuIcons.audit.auditActive
-                : menuIcons.audit.auditString
-            "
-            height="12px"
-            width="12px"
-          />
-        </span>
-      </div>
-      <div
-        class="admin-sideCol-navCard-subHeading sideNavbar_text_active mx-2"
-        [ngClass]="{
-          sideNavbar_text_active:
-            menuIcons.audit.auditString === menuIcons.audit.auditActive
-        }"
-      >
-        Audit
-      </div>
+  <div
+    id="audit-nav"
+    class="menu d-flex align-items-center"
+    routerLink="/audit"
+  >
+    <div class="img-bg">
+      <div class="icon audit-link"></div>
     </div>
+    <div class="label mx-2">Audit</div>
   </div>
 </mat-menu>
 
@@ -508,3 +349,31 @@
     <span>{{ SmallCells }} Small Cells</span>
   </button>
 </mat-menu>
+
+<div #menuTrigger="matMenuTrigger" [matMenuTriggerFor]="UserCard">
+  <mat-menu
+    class="aether-UserCard aether-UserCard-triangle"
+    #UserCard="matMenu"
+  >
+    <div class="aether-UserCard-ppicHolder">
+      <img
+        class="aether-UserCard-ppicHolder-ppic"
+        src="../../../../assets/Navbar/profile-pic.svg"
+      />
+      <sup
+        ><img
+          class="aether-UserCard-ppicHolder-ppic-active"
+          src="../../../../assets/CommonAssets/active-dot.svg"
+      /></sup>
+    </div>
+    <div class="aether-UserCard-flName">
+      <span>John Fivegee</span>
+    </div>
+    <div class="my-1 aether-UserCard-flName-email">
+      <span>johnfivegee5@tesla.com</span>
+    </div>
+    <div class="my-3 aether-UserCard-flName-logout d-flex" routerLink="/login">
+      <img class="mx-1" src="../../../../assets/Navbar/logout.svg" />Logout
+    </div>
+  </mat-menu>
+</div>
