--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,54 @@ body {
 // global
 
 body {
-  background: #edf4ff !important;
+  // background: #edf4ff !important;
+  background: #f0f3fa !important;
+}
+.form-field-area-login,
+.form-field-area-forgot {
+  .mat-form-field-appearance-fill .mat-form-field-flex {
+    background: #f0f3fa;
+    border-bottom: 0.5px solid #3c4257;
+  }
+}
+
+.graph-modal-container {
+  [class~="mat-dialog-container"] {
+    border-radius: 12px;
+    border: none;
+    padding: 0;
+  }
+}
+.audit-user-modal-container {
+  [class~="mat-dialog-container"] {
+    padding: 16px;
+  }
+  [class~="mat-content"] {
+    .row {
+      width: 100%;
+    }
+  }
+  [class~="mat-expanded"] {
+    background-color: #f0f3fa;
+    // height: 30px;
+    // margin-top: 10px;
+    &:hover {
+      background-color: #f0f3fa;
+    }
+  }
+  [class~="mat-expansion-panel"] {
+    border-bottom: 1px solid #d8d8d8;
+    box-shadow: none;
+    &:last-child {
+      border-bottom: none;
+    }
+  }
+  [class~="mat-expansion-panel-content"] {
+    background-color: #f0f3fa;
+  }
+  [class~="mat-expansion-panel-spacing"] {
+    margin: 0;
+  }
 }
 .form-field-area-login,
 .form-field-area-forgot {
